# telegram-signals

./: .firebaserc  .gcloudignore  .gitignore  5-Analysis Logic and Processing Flow.md  AI_Integration_Plan.md  CODEBASE_ANALYSIS.md  Consolidated_Micro_Scalp_Action_Plan.md  DEPLOYMENT_GCP.md  Dockerfile  FIX_SCHEDULER_ERROR.md  GCP_EASY_DEPLOYMENT_GUIDE.md  GROK ANALYSIS.md  Implementation Plan.md  Project Current Status Report.md  README.md  SYSTEM_STATUS_AND_OPTIMIZATION_PLAN.md  TECHNICAL_ANALYSIS_DOCUMENTATION.md  Trading Signal Application.md  Trading Strategy and Analysis Approach.md  backtest_trades_log.csv  build_log.txt  clauderesponse.txt  clear_positions.py  cloudbuild-micro.yaml  cloudbuild.yaml  dataclaude.txt  datadeep.txt  datagem.txt  datagrok.txt  deepseekresponse.txt  deploy-micro-scalp.sh  firebase.json  firestore.indexes.json  firestore.rules  gcpdeploylogs.txt  geminiresponse.txt  grokresponse.txt  import_test.py  local_bybit_test.py  local_test_runner.py  (+17 more)
analysis/: analyze_no_tp.py  analyze_sol_moves.py  evaluate_rule_performance.py  exploratory_analysis.py  fetch_and_analyze_sol_hourly_90d.py  generate_candles.py  market_move_analyzer.py  pattern_recognition_and_backtest.py  pattern_success_analyzer.py  quick_candle_research.py  run_final_strategy.py  run_final_strategy_v2.py  run_full_batch.py  run_macro_v1.py  run_market_analysis.py  run_pattern_analysis.py  run_refined_batch.py  run_refined_batch_v2.py  run_refined_batch_v3.py  run_refined_batch_v4.py  run_refined_batch_v5.py  signal_potential_analysis.py  sweet_spots.txt
analysis_results/: sol_90d_opportunities.csv  sol_90d_summary.txt  sol_analysis_summary.txt  sol_full_1h.csv  sol_opportunities.csv  sol_pattern_clusters.csv  (+2 more)
(+191 files in other folders)
