[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "firebase-admin>=6.7.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-cloud-firestore>=2.20.2",
    "google-cloud-scheduler>=2.16.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "websocket-client>=1.8.0",
]
