[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.7.0",
    "google-cloud-firestore>=2.20.2",
    "google-cloud-scheduler>=2.16.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.5",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.30.0",
    "TA-Lib>=0.4.24",
]

[tool.setuptools]
packages = ["functions"]
