[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro_scalp_engine"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "Cryptocurrency micro scalping engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "ccxt",
    "scikit-learn",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
packages = ["micro_scalp_engine"]
